test/Fail/FunSort-SSet-X-SetOmega.err
FunSort-SSet-X-SetOmega.agda:6.13-18: error: [UnequalSorts]
Setω != funSort SSet _4
when checking that the expression A → B has type Setω
